<resources>
    <string name="app_name">sample_project</string>

    <string name="navigation_widgets">Widgets</string>
    <string name="navigation_SQL">SQL</string>

    <string name="navigation_menu_header_image">navigation_menu_header_image</string>
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>

    <string name="autocomplete_textview">Autocomplete Textview</string>
    <string name="check_boxes">Check Boxes</string>
    <string name="chips">Chips</string>
    <string name="edittext">EditText</string>
    <string name="progressbar">Progress Bar</string>
    <string name="radio_button">Radio Button</string>
    <string name="rating_bar">Rating Bar</string>
    <string name="seekbar">SeekBar</string>
    <string name="spinner">Spinner</string>
    <string name="switcher">Switch</string>
    <string name="textview">TextView</string>
    <string name="togglebutton">Toggle Button</string>

    <string name="switchertext">Switcher</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="_0">0</string>

    <string name="starts_with_k">Starts with letter K</string>
    <string name="end_with_n">End with letter N</string>
    <string name="contain_letter_l">Contain letter L</string>

    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>

    <string name="start">Start</string>

    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Morbi lobortis tortor enim, sed mattis kopert turpis koloss tempus non. Integer a sapien egestas, sodales
        elit a, volutpat erat. Nullam aliquam nisi mauris, non kren kort tincidunt nulla convallis ac. Cras
        nec est vitae arcu auctor dictum. Donec nogon eleifend elon sagittis kagan kotan sapien, a maximus libero mollis
        in. Nam maximus massa lectus, nec kotlin kebany ketan accumsan eros molestie niggel kilerum ut. Vestibulum dui velit, rutrum
        vel hendrerit eget, condimentum non augue. </string>
    <string name="ok">OK</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="kotlin">Kotlin</string>
    <string name="spinner_widget_content">spinner_widget_content</string>
    <string name="keep_calm_and_code_on">Keep calm and code on</string>
    <string name="toggle_button_widget_s_imageview">Toggle button widget\'s imageview</string>
    <string name="background_off">Background: Off</string>
    <string name="background_on">Background: On</string>
    <string name="content_off">Content: Off</string>
    <string name="content_on">Content: On</string>
    <string name="text_off">Text: Off</string>
    <string name="text_on">Text: On</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="airplane_mode">Airplane mode</string>

    <string name="wifi_on">Wifi: On</string>
    <string name="bluetooth_on">Bluetooth: On</string>
    <string name="airplane_mode_on">Airplane mode: On</string>
    <string name="wifi_off">Wifi: Off</string>
    <string name="bluetooth_off">Bluetooth: Off</string>
    <string name="airplane_mode_off">Airplane mode: Off</string>

    <string name="dialogfragment">DialogFragment</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="dialog_fragment_default">Dialog Fragment (default)</string>
    <string name="dialog_fragment_single_choice">Dialog Fragment (single choice)</string>
    <string name="dialog_fragment_single_choice_with_confirmation">Dialog Fragment (single choice with confirmation)</string>
    <string name="dialog_fragment_multiple_choice">Dialog Fragment (multiple choice)</string>
    <string name="dialog_fragment_multiple_choice_with_confirmation">Dialog Fragment (multiple choice with confirmation)</string>
    <string name="current_color">Current Color:</string>

    <string name="android_uninstall">Android will be uninstalled in 10 seconds</string>
    <string name="android_uninstall_denied">Self-destruct after 10 seconds</string>

    <string name="current_volume">Current Volume: %1$d%%</string>
    <string name="volumes_list">Volume: %1$d%%</string>

    <string-array name="colors">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>


</resources>