<?xml version="1.0" encoding="utf-8"?>

<com.mrkurilin.sample_project.ExpandableView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:toggleButtonText="@string/check_boxes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/linearlayout_checkbox_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_red_checkbox_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />

            <CheckBox
                android:id="@+id/checkbox_green_checkbox_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green" />

            <CheckBox
                android:id="@+id/checkbox_blue_checkbox_widget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

        </LinearLayout>

        <View
            android:id="@+id/view_checkbox_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@color/black" />

    </LinearLayout>

</com.mrkurilin.sample_project.ExpandableView>