<?xml version="1.0" encoding="utf-8"?>

<com.mrkurilin.sample_project.ExpandableView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:toggleButtonText="@string/switcher">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_wifi_switch_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wi_fi"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_bluetooth_switch_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bluetooth"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_wifi_switch_widget" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_wifi_switch_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/textview_wifi_switch_widget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_wifi_switch_widget" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_bluetooth_switch_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/textview_bluetooth_switch_widget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textview_bluetooth_switch_widget" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.mrkurilin.sample_project.ExpandableView>